--- a/css/theme-default/bootstrap.css
+++ b/css/theme-default/bootstrap.css
@@ -4318,6 +4318,25 @@ fieldset[disabled] .btn-link:focus {
   color: #969c9c;
   text-decoration: none;
 }
+.btn-modal
+{
+	background: transparent;
+    border: 1px solid #f16e6e;
+    border-radius: 2px;
+    padding: 4.5px 15px;
+    width: 70px;
+    color: #de5c5c !important;
+}
+.btn-modal:hover,
+.btn-modal:focus,
+.btn-modal.focus,
+.btn-modal:active,
+.btn-modal.active,
+.open > .dropdown-toggle.btn-modal{
+  color:black;
+  background: transparent;
+  border-color: #2196f3;
+}
 .btn-lg,
 .btn-group-lg > .btn {
   padding: 10px 16px;
@@ -6780,7 +6799,7 @@ button.close {
   background-color: #ffffff;
   border: 1px solid #999999;
   border: 1px solid rgba(0, 0, 0, 0.2);
-  border-radius:10px;
+  border-radius:2px;
   -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
   box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
   background-clip: padding-box;
@@ -6802,11 +6821,11 @@ button.close {
   filter: alpha(opacity=50);
 }
 .modal-header { 
-   padding: 15px;
+  padding: 10px 15px;
     border-bottom: 1px solid #e5e5e5;
     min-height: 16.846153846px;
-    background:#2196f3;
-    color: white;
+    background:transparent;
+    color:black;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
@@ -6823,7 +6842,7 @@ button.close {
 }
 .modal-footer {
   padding: 15px;
-  text-align: right;
+  text-align: left;
   border-top: 1px solid #e5e5e5;
 }
 .modal-footer .btn + .btn {
