--- a/css/theme-default/bootstrap.css
+++ b/css/theme-default/bootstrap.css
@@ -3705,9 +3705,8 @@ fieldset[disabled] .btn {
   -webkit-box-shadow: none;
   box-shadow: none;
 }
-.btn-default {
-  color: #969c9c;
-  color: #313534;
+.btn-default { 
+  color: #ffffff;
   background-color: #889a9a;
   border-color: #e5e6e6;
 }
@@ -6819,6 +6818,7 @@ button.close {
 .modal-backdrop.in {
   opacity: 0.5;
   filter: alpha(opacity=50);
+  height: 100%;
 }
 .modal-header { 
   padding: 10px 15px;
