modal and profile

--- a/css/theme-default/materialadmin.css
+++ b/css/theme-default/materialadmin.css
@@ -11621,5 +11621,27 @@ body {
 
 }
     .cf-cross-button-left-00{margin: -33% -3% 0% 0%;}
- 
+  .section-head {
+ margin-bottom:30px;
+}
+text-center
+.section-head.no-margin {
+ margin-bottom:0;
+}
+.text-uppercase {
+ text-transform: uppercase
+}
+.wt-separator-outer {
+ overflow:hidden;
+ margin:-10px 0px;
+}
+.wt-separator {
+ display:inline-block;
+ height:3px;
+ width:50px;
+ position:relative;
+}
+.acc-bg-primary a {
+ background-color:#d21e2b;
+}
  
