--- a/css/theme-default/bootstrap.css
+++ b/css/theme-default/bootstrap.css
@@ -6805,6 +6805,8 @@ button.close {
   outline: 0;
 }
 .modal-backdrop {
+  width:100%;
+  height:100%;
   position: absolute;
   top: 0;
   right: 0;
